--- a/index.html
+++ b/index.html
@@ -1707,16 +1707,20 @@
 
     async function getReviews() {
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbwpIOE0lrZn_MZXn2aV8og6C2hEqeiV13DA0leKURFmjQlauQvAJxnH_4b9V8qTV5nh3Q/exec");
+        const response = await fetch("https://opensheet.elk.sh/12tv0KTQO0LXiNyl6ku6FdqBFL4KguFVMoGeHNRCBZnc/Form%20Responses%202");
         const reviews = await response.json();
-        return reviews;
+        return reviews.map(review => ({
+         name: review.Name || "Anonymous",
+         rating: parseInt(review.Rating || 0),
+         comment: review.Comment || "",
+         date: review.Timestamp || ""
+        }));
       } catch (error) {
-       console.error("Error getting reviews:", error);
-       return [];
+        console.error("Error getting reviews:", error);
+        return [];
       }
-    }
-
-
+    } 
+   
     function saveSubscription(email) {
       try {
        const subscriptions = JSON.parse(localStorage.getItem('starms-subscriptions') || '[]');
