--- a/index.html
+++ b/index.html
@@ -1689,22 +1689,42 @@
       }, 1000);
     }
 
+    
     async function saveReview(review) {
+      const formData = new FormData();
+      formData.append("entry.608345727", review.Name);     
+      formData.append("entry.1159487446", review.Rating); 
+      formData.append("entry.1638391418", review.Comment); 
+
       try {
-        await fetch("https://script.google.com/macros/s/AKfycbwpIOE0lrZn_MZXn2aV8og6C2hEqeiV13DA0leKURFmjQlauQvAJxnH_4b9V8qTV5nh3Q/exec", {
+        const response = await fetch("https://docs.google.com/forms/u/0/d/e/1FAIpQLScfnyY0lFySpdxq9Q2m355eQ-3_a5TDjQxeShnJ-FiNnnpFxA/formResponse", {
           method: "POST",
-          body: JSON.stringify(review),
-          headers: {
-            "Content-Type": "application/json"
-          }
+          mode: "no-cors", 
+          body: formData
         });
-        return true;
-      } catch (error) {
-        console.error("Error saving review:", error);
+        return true; 
+      } catch (err) {
+        console.error("Error submitting review:", err);
         return false;
       }
     }
 
+    async function getReviews() {
+      try {
+        const response = await fetch("https://opensheet.elk.sh/12tv0KTQO0LXiNyl6ku6FdqBFL4KguFVMoGeHNRCBZnc/Form%20Responses%202");
+        const reviews = await response.json();
+        return reviews.map(review => ({
+         name: review.Name || "Anonymous",
+         rating: parseInt(review.Rating || 0),
+         comment: review.Comment || "",
+         date: review.Timestamp || ""
+        }));
+      } catch (error) {
+        console.error("Error getting reviews:", error);
+        return [];
+      }
+    } 
+   
     async function getReviews() {
       try {
         const response = await fetch("https://opensheet.elk.sh/12tv0KTQO0LXiNyl6ku6FdqBFL4KguFVMoGeHNRCBZnc/Form%20Responses%202");
