--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="https://www.gstatic.com/firebasejs/11.9.1/firebase-analytics.js"></script>
 
   <script src="aos/aos.js"></script>
-<link href="styles.css" rel=stylesheet"/>
+<link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
     <!-- All HTML content will be embedded here -->
